kubernetes/apps/default/echo-oidcauth/app/securitypolicy.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.envoyproxy.io/securitypolicy_v1alpha1.json
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: echo-oidcauth-oauth-policy
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: echo-oidcauth
  oidc:
    provider:
      issuer: "https://auth.${SECRET_DOMAIN}/application/o/echo-oidcauth"
    clientID: "zervQZYSRM5uyYvSwnscHaQLQdFFz7NRLiHFxpIx"
    clientSecret:
      name: echo-auth-client-secret
    redirectURL: "https://echo-oidcauth.${SECRET_DOMAIN}/oauth2/callback"
    cookieDomain: "${SECRET_DOMAIN}"
    cookieNames:
      accessToken: "access-token"
    scopes:
      - "openid"
      - "email"
      - "profile"
      - "groups"
      - "offline_access"
  jwt:
    providers:
      - name: authentik
        issuer: https://auth.${SECRET_DOMAIN}/application/o/echo-oidcauth/
        remoteJWKS:
          uri: https://auth.${SECRET_DOMAIN}/application/o/echo-oidcauth/jwks/
        extractFrom:
          cookies:
            - "access-token"
        claimToHeaders:
          - claim: email
            header: X-User-Email
          - claim: name
            header: X-User-Name
          - claim: preferred_username
            header: X-User-ID
          - claim: groups
            header: X-User-Groups
